--- a/app/elements/my-list/my-list.html
+++ b/app/elements/my-list/my-list.html
@@ -6,10 +6,9 @@ The complete set of authors may be found at http://polymer.github.io/AUTHORS.txt
 The complete set of contributors may be found at http://polymer.github.io/CONTRIBUTORS.txt
 Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
--->
-<link rel="import" href="../../bower_components/polymer/polymer.html">
+--><html><head><link rel="import" href="../../bower_components/polymer/polymer.html">
 
-<dom-module id="my-list">
+</head><body><dom-module id="my-list">
   <template>
     <style>
       :host {
@@ -23,30 +22,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </ul>
   </template>
 
-  <script>
-    (function () {
-      'use strict';
-
-      Polymer({
-        is: 'my-list',
-        properties: {
-          items: {
-            type: Array,
-            notify: true,
-          }
-        },
-        ready: function() {
-          this.items = [
-            'Responsive Web App boilerplate',
-            'Iron Elements and Paper Elements',
-            'End-to-end Build Tooling (including Vulcanize)',
-            'Unit testing with Web Component Tester',
-            'Routing with Page.js',
-            'Offline support with the Platinum Service Worker Elements'
-          ];
-        }
-      });
-    })();
-  </script>
+  <script src="my-list.html.0.js"></script>
 
 </dom-module>
+</body></html>
