--- a/app/test/index.html
+++ b/app/test/index.html
@@ -23,7 +23,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <body>
 
     <script>
-      WCT.loadSuites(['my-greeting-basic.html', 'my-list-basic.html']);
+      WCT.loadSuites(['my-greeting-basic.html', 'my-list-basic.html', 'native-sample-basic.html']);
     </script>
 
 
